k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birthday-ingress
  namespace: birthdayapp
spec:
  ingressClassName: nginx-internal
  rules:
    - host: birthday.losnavar.com
      http:
        paths:
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
